# pkg/models/livestock.go
@@ -1,6 +1,9 @@
 package models
 
-import "time"
+import (
+	"backend/pb"
+	"time"
+)
 
 type Livestocks struct {
 	ID             int `gorm:"primaryKey"`
@@ -15,6 +18,40 @@ type Livestocks struct {
 	Reference      string
 	CreatedAt      time.Time
 	UpdatedAt      time.Time
-	DeletedAt      time.Time
+	DeletedAt      *time.Time
 	Actions        []Actions `gorm:"foreignKey:TargetID"`
+	FarmArea       FarmArea  `gorm:"foreignKey:FarmAreaID"`
+	User           User      `gorm:"foreignKey:UserID"`
+}
+
+func LifeStockAll(lifeStock []Livestocks) []*pb.LifeStockAll {
+	var lifeStockAll []*pb.LifeStockAll
+	for _, v := range lifeStock {
+		lifeStockAll = append(lifeStockAll, LifeStock(v))
+	}
+	return lifeStockAll
+}
+
+func LifeStock(lifeStock Livestocks) *pb.LifeStockAll {
+	return &pb.LifeStockAll{
+		Reference:  lifeStock.Reference,
+		JenisHewan: lifeStock.Spesies,
+		UmurHewan:  lifeStock.Age,
+		NamaUser:   lifeStock.User.Name,
+		Id:         int64(lifeStock.ID),
+	}
+}
+
+func LifeStockDetail(lifeStock Livestocks) *pb.LifeStockDetail {
+	return &pb.LifeStockDetail{
+		Id:                  int64(lifeStock.ID),
+		Reference:           lifeStock.Reference,
+		NamaHewan:           lifeStock.Spesies,
+		UmurHewan:           lifeStock.Age,
+		Quantity:            int64(lifeStock.Quantity),
+		LuasKandang:         lifeStock.FarmArea.Wide,
+		KebutuhanMakan:      lifeStock.KebutuhanMakan,
+		PersentaseKesehatan: lifeStock.HealthStatus,
+		JenisMakanan:        lifeStock.TypeOfFood,
+	}
 }
